Bug 479652 - DrKonqi build fails at linking sentry data binary, and at other linking points.
Summary: DrKonqi build fails at linking sentry data binary, and at other linking points.
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-11 15:57 UTC by zachariah.cabelly
Modified: 2024-01-15 12:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zachariah.cabelly 2024-01-11 15:57:04 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Attempt to build using GCC (Clang fails a lot earlier)
2. Watch link failure
3. Lose

OBSERVED RESULT
Build of this fails

EXPECTED RESULT
DrKonqi builds successfully

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kernel CachyOS 6.6.8 w/ NVIDIA Drivers installed
(available in About System)
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Using a Hyprland setup at the time I filed this bug
Comment 1 zachariah.cabelly 2024-01-11 16:23:38 UTC
I got an actual failure: /home/td5038/drkonqi/src/sentry/data/main.cpp:75:(.text+0xe09): undefined reference to `QByteArray::toStdString[abi:cxx11]() const'
Comment 2 zachariah.cabelly 2024-01-11 16:43:38 UTC
This is one of the clang errors; /var/tmp/portage/kde-plasma/drkonqi-9999/work/drkonqi-9999/src/coredump/dumpexcavator/automaticcoredumpexcavator.cpp:66:13: error: use of undeclared identifier 'close'
   66 |             close(fd);
      |             ^
Comment 3 zachariah.cabelly 2024-01-11 16:44:50 UTC
Can reproduce outside of Portage
Comment 4 Bug Janitor Service 2024-01-12 11:13:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/213
Comment 5 Harald Sitter 2024-01-12 11:14:52 UTC
Git commit dbe40aa838f47011d7df5f87ee8a6283f353ccb9 by Harald Sitter.
Committed on 12/01/2024 at 12:12.
Pushed by sitter into branch 'master'.

dumpexcavator: include unistd for close declaration

otherwise clang may trip over `use of undeclared identifier 'close'`

M  +1    -0    src/coredump/dumpexcavator/automaticcoredumpexcavator.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/dbe40aa838f47011d7df5f87ee8a6283f353ccb9
Comment 6 Harald Sitter 2024-01-15 12:10:19 UTC
Git commit e5fd6afa4619ff79ff5188484b16e9caaadd1876 by Harald Sitter.
Committed on 15/01/2024 at 13:08.
Pushed by sitter into branch 'Plasma/6.0'.

dumpexcavator: include unistd for close declaration

otherwise clang may trip over `use of undeclared identifier 'close'`


(cherry picked from commit dbe40aa838f47011d7df5f87ee8a6283f353ccb9)

M  +1    -0    src/coredump/dumpexcavator/automaticcoredumpexcavator.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/e5fd6afa4619ff79ff5188484b16e9caaadd1876