dumpexcavator: include unistd for close declaration

otherwise clang may trip over `use of undeclared identifier 'close'`

BUG: 479652


(cherry picked from commit dbe40aa838f47011d7df5f87ee8a6283f353ccb9)